tests/NormalTests/paczka1/small_fuzzy/11168810.err
Error in line 2: A8ZJYZ S873 15,6
Error in line 6: Qvz7gcV S669 48,2
Error in line 9: Qvz7gcV A345 21,8
Error in line 8: A8ZJYZ S669 67,7
